[gd_scene load_steps=4 format=3 uid="uid://p4l4p5r4rn5w"]

[ext_resource type="Script" uid="uid://dt3twolhelrw" path="res://scenes/levels/level_3/interactions/1/interaction_1.gd" id="1_khm28"]
[ext_resource type="PackedScene" uid="uid://dfubshgw0ydkb" path="res://scenes/text_buble/text_buble.tscn" id="2_jyu7m"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_affrn"]
size = Vector2(16, 16)

[node name="Interaction1" type="Area2D" groups=["interact"]]
script = ExtResource("1_khm28")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_affrn")

[node name="Control" parent="." instance=ExtResource("2_jyu7m")]
visible = false
offset_left = -16.0
offset_top = -40.0
offset_right = -16.0
offset_bottom = -40.0

[connection signal="area_entered" from="." to="." method="_on_detection_area_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_detection_area_area_exited"]
[connection signal="tree_exiting" from="." to="." method="_on_tree_exiting"]
